kubernetes/02_rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3.10-management
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 5672
        - containerPort: 15762
       
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  selector:
    app: rabbitmq
  type: LoadBalancer 
  ports:
  - protocol: TCP
    name: internal
    port: 5672
    targetPort: 5672
  - protocol: TCP
    name: web
    port: 15672
    targetPort: 15672
