kubernetes/06_configServer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
spec:
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
      - name: config-server
        image: andychentw/bank-config:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8010

---
apiVersion: v1
kind: Service
metadata:
  name: config-server-service
spec:
  selector:
    app: config-server
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8010
    targetPort: 8010
