kubernetes/07_eurekaServer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
spec:
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
      - name: eureka-server
        image: andychentw/eureka-server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8011

---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server-service
spec:
  selector:
    app: eureka-server
  type: LoadBalancer  
  ports:
  - protocol: TCP
    port: 8011
    targetPort: 8011
