kubernetes/10_cards.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cards
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cards
  template:
    metadata:
      labels:
        app: cards
    spec:
      containers:
      - name: cards
        image: andychentw/cards:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9000

---
apiVersion: v1
kind: Service
metadata:
  name: cards-service
spec:
  selector:
    app: cards
  type: ClusterIP  
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
