kubernetes/12_loans.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loans
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loans
  template:
    metadata:
      labels:
        app: loans
    spec:
      containers:
      - name: loans
        image: andychentw/loans:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 8090

---
apiVersion: v1
kind: Service
metadata:
  name: loans-service
spec:
  selector:
    app: loans
  type: LoadBalancer  
  ports:
  - protocol: TCP
    port: 8090
    targetPort: 8090
